# arpent-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
architecture_template/: .agent  .arpent  .gitignore  COMPASS.md  README.md  me.md
architecture_template/02_areas/: README.md  _context.template.md
architecture_template/06_indexes/: agent_infrastructure_index.yaml  cron.json  pending_db_writes.yaml  tools.yaml
development/: MANIFEST.md  token-consumption-before-after.md
references/: architecture.md  arpent-use.md  cheatsheet.md  frontmatter.md  import-and-migration.md  indexing-and-context.md  ingestion-and-degraded-mode.md  lifecycle.md  memory-layers.md  minimal-mode.md  routing.md  tools-and-cron.md
references/adapters/: cli.md  filesystem.md
references/appendices/: complete-COMPASS.md  complete-reference-index.md
references/assurance/: capability-matrix.md
references/contracts/: frontmatter.md  provenance-and-body.md  routing.md
references/modes/: full.md  minimal.md
references/workflows/: COMPASS.md  capture-fleeting.md  capture-note.md  capture-todo.md  maintain-howto.md
scripts/: COMPASS.md  __init__.py  backup.py  cli.py  context.py  cron.py  file_transaction.py  frontmatter.py  import_executor.py  import_manifest.py  index.py  init_structure.py  notes.py  operations.py  operations.yaml  projects.py  routing.py  session.py  skill_bundle.py  sweep.py  todo.py  todo_schema.sql  tools.py  usage.py  vault.py  views.py
tests/: README.md  __init__.py  run.py
tests/benchmarks/: README.md  __init__.py  run.py  test_adapter.py  test_metrics.py  test_performance.py  test_reports.py  test_schema.py  test_scoring.py
tests/e2e/: __init__.py  _support.py  test_capture_boundary.py  test_continuity_modes_backup.py  test_lifecycle.py  test_linear_tools.py  test_todo_lifecycle.py  test_triage_ingest.py
tests/regression/: __init__.py  _support.py  test_concurrency_and_contracts.py  test_database_resilience.py  test_file_transactions.py  (+5 more)
(+118 files in other folders)
