[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arpent"
version = "0.1.0"
description = "A filesystem-native personal life OS with a zero-dependency core and SQLite todo flow."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = []   # stdlib only, by design

[project.scripts]
arpent = "scripts.cli:main"
arp = "scripts.cli:main"

[tool.setuptools]
packages = ["scripts"]

[tool.setuptools.package-data]
scripts = ["COMPASS.md", "operations.yaml", "todo_schema.sql"]
