[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arpent"
version = "0.1.0"
description = "A filesystem-native personal life OS with a zero-dependency core and SQLite todo flow."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = []   # stdlib only, by design

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.2,<8",
    "setuptools>=61",
    "wheel>=0.38",
]

[project.scripts]
arpent = "scripts.cli:main"
arp = "scripts.cli:main"

[tool.setuptools]
packages = ["scripts"]

[tool.setuptools.package-data]
scripts = ["COMPASS.md", "operations.yaml", "todo_schema.sql"]

[tool.setuptools.data-files]
"share/arpent/skill" = ["SKILL.md"]
"share/arpent/skill/references" = ["references/*.md"]
"share/arpent/skill/references/appendices" = ["references/appendices/*.md"]
"share/arpent/skill/references/assurance" = ["references/assurance/*.md"]
"share/arpent/skill/references/contracts" = ["references/contracts/*.md"]
"share/arpent/skill/references/modes" = ["references/modes/*.md"]
"share/arpent/skill/references/workflows" = ["references/workflows/*.md"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["scripts"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = true
